# itineraries-server/pkg/restapi/operations/itineraries_api.go
@@ -19,8 +19,6 @@ import (
 	strfmt "github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 
-	"github.com/amadeusitgroup/miniapp/itineraries-server/pkg/restapi/operations/airlines"
-	"github.com/amadeusitgroup/miniapp/itineraries-server/pkg/restapi/operations/airports"
 	"github.com/amadeusitgroup/miniapp/itineraries-server/pkg/restapi/operations/itineraries"
 	"github.com/amadeusitgroup/miniapp/itineraries-server/pkg/restapi/operations/liveness"
 	"github.com/amadeusitgroup/miniapp/itineraries-server/pkg/restapi/operations/readiness"
@@ -43,12 +41,6 @@ func NewItinerariesAPI(spec *loads.Document) *ItinerariesAPI {
 		BearerAuthenticator: security.BearerAuth,
 		JSONConsumer:        runtime.JSONConsumer(),
 		JSONProducer:        runtime.JSONProducer(),
-		AirlinesGetAirlinesHandler: airlines.GetAirlinesHandlerFunc(func(params airlines.GetAirlinesParams) middleware.Responder {
-			return middleware.NotImplemented("operation AirlinesGetAirlines has not yet been implemented")
-		}),
-		AirportsGetAirportsHandler: airports.GetAirportsHandlerFunc(func(params airports.GetAirportsParams) middleware.Responder {
-			return middleware.NotImplemented("operation AirportsGetAirports has not yet been implemented")
-		}),
 		ItinerariesGetItinerariesHandler: itineraries.GetItinerariesHandlerFunc(func(params itineraries.GetItinerariesParams) middleware.Responder {
 			return middleware.NotImplemented("operation ItinerariesGetItineraries has not yet been implemented")
 		}),
@@ -89,10 +81,6 @@ type ItinerariesAPI struct {
 	// JSONProducer registers a producer for a "application/json" mime type
 	JSONProducer runtime.Producer
 
-	// AirlinesGetAirlinesHandler sets the operation handler for the get airlines operation
-	AirlinesGetAirlinesHandler airlines.GetAirlinesHandler
-	// AirportsGetAirportsHandler sets the operation handler for the get airports operation
-	AirportsGetAirportsHandler airports.GetAirportsHandler
 	// ItinerariesGetItinerariesHandler sets the operation handler for the get itineraries operation
 	ItinerariesGetItinerariesHandler itineraries.GetItinerariesHandler
 	// LivenessGetLiveHandler sets the operation handler for the get live operation
@@ -160,14 +148,6 @@ func (o *ItinerariesAPI) Validate() error {
 
 	if o.JSONProducer == nil {
 		unregistered = append(unregistered, "JSONProducer")
-	}
-
-	if o.AirlinesGetAirlinesHandler == nil {
-		unregistered = append(unregistered, "airlines.GetAirlinesHandler")
-	}
-
-	if o.AirportsGetAirportsHandler == nil {
-		unregistered = append(unregistered, "airports.GetAirportsHandler")
 	}
 
 	if o.ItinerariesGetItinerariesHandler == nil {
@@ -279,16 +259,6 @@ func (o *ItinerariesAPI) initHandlerCache() {
 	if o.handlers == nil {
 		o.handlers = make(map[string]map[string]http.Handler)
 	}
-
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
-	}
-	o.handlers["GET"]["/airlines"] = airlines.NewGetAirlines(o.context, o.AirlinesGetAirlinesHandler)
-
-	if o.handlers["GET"] == nil {
-		o.handlers["GET"] = make(map[string]http.Handler)
-	}
-	o.handlers["GET"]["/airports"] = airports.NewGetAirports(o.context, o.AirportsGetAirportsHandler)
 
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
